# mad

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: commit-planner.md  implementer.md  spec-author.md  spec-reviewer.md  test-author.md  test-critic.md  write-test.md
.claude/commands/: implement.md
.claude/skills/commit/: SKILL.md
.claude/skills/intake/: SKILL.md
.claude/skills/work/: SKILL.md
.claude/skills/write-test/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: docs-validate.yml  release.yml
docs/: .docs-manifest.yaml  README.md  events-architecture.md  testing-heuristics.md
docs/01-overview/: context.md  domain.md  glossary.md  operations.md  passport.md  scope.md
docs/02-architecture/: components.md  data-model.md  overview.md  source-tree.md  test-tree.md
docs/03-contracts/: api.md  events-consumed.md  events-published.md  external-dependencies.md  jobs.md
docs/04-conventions/: api-design.md  auth.md  error-handling.md  logging.md  quality.md  testing-strategy.md
docs/05-operations/: ci-cd.md  configuration.md  deployment.md  known-issues.md  local-dev.md  scripts.md  slos.md
docs/05-operations/runbooks/: README.md
docs/06-flow-participation/: README.md
docs/07-decisions/: README.md
docs/08-rfcs/: README.md
docs/09-history/: changelog.md  migrations.md
docs/adr/: 0009-orchestration-module.md  README.md
specs/v0.1/: design.md  plan.md  requirements.md
src/mad/: cli.py
src/mad/agent/: loop.py  (+1 more)
tests/: conftest.py  test_acceptance.py  test_security.py
tests/support/: launchers.py
(+98 files in other folders)
