[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mad"
version = "0.1.0"
description = "Multi Agent Develop — self-hosted autonomous Claude sessions against GitHub repos."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "anthropic>=0.39",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mad = "mad.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
pythonpath = ["src"]
